# supertask

./: .travis.yml  CMakeLists.txt  Dockerfile  Vagrantfile
examples/: demo.cpp
include/: cos.h  sqrt.h
sources/: cos.cpp  sqrt.cpp
tests/: test.cpp
